--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^43.3.1",
     "@ckeditor/ckeditor5-react": "^9.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
@@ -25,6 +27,7 @@
     "apexcharts": "^4.1.0",
     "formik": "^2.4.6",
     "lightgallery": "^2.8.1",
+    "moment": "^2.30.1",
     "nouislider-react": "^3.4.2",
     "p-min-delay": "^4.0.2",
     "react": "^18.3.1",
