--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@supabase/supabase-js": "^2.49.1",
-    "apexcharts": "^4.1.0",
+    "apexcharts": "^4.5.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "lightgallery": "^2.8.1",
     "moment": "^2.30.1",
     "nouislider-react": "^3.4.2",
     "p-min-delay": "^4.0.2",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.6.0",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.6",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
