--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "apexcharts": "^4.5.0",
     "dayjs": "^1.11.13",
+    "firebase-admin": "^13.4.0",
     "formik": "^2.4.6",
     "lightgallery": "^2.8.1",
     "moment": "^2.30.1",
