feat: add TagsListCard component to display releases by version
- Introduced a new TagsListCard component that fetches and displays release information from the Supabase database.
- Integrated ReactMarkdown for rendering release notes with GitHub Flavored Markdown support.
- Updated OverviewTab to include the new TagsListCard component alongside existing charts.
- Added new dependencies: react-markdown and remark-gfm for markdown rendering.
- Enhanced CSS for better styling of markdown headers.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-form-stepper": "^2.0.3",
     "react-linear-gradient-picker": "^3.0.1",
+    "react-markdown": "^10.1.0",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-nestable": "^3.0.2",
     "react-range-slider-input": "^3.0.7",
@@ -54,6 +55,7 @@
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
+    "remark-gfm": "^4.0.1",
     "rsuite": "^5.74.2",
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15",
