--- a/netlify/netlify.toml
+++ b/netlify/netlify.toml
@@ -2,3 +2,8 @@
   command = "npm run build"
   functions = "netlify/functions"
   publish = "dist"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
