--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@google-cloud/bigquery": "^8.1.1",
     "@hello-pangea/dnd": "^17.0.0",
     "@loadable/component": "^5.16.4",
     "@n8tb1t/use-scroll-position": "^2.0.3",
