--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "netlify-cli": "^23.10.0",
     "prettier": "3.5.3",
     "sass": "^1.81.1",
     "supabase": "^2.19.7",
